@@ -26,6 +26,11 @@ $ -> Language fix or change
 ! -> Note
 
 2014-05-06 Christophe Demko <chdemko@gmail.com>
+	* src/lattice/Rule.java
+	* test/lattice/RuleTest.java
+		- Remove useless method
+
+2014-05-06 Christophe Demko <chdemko@gmail.com>
 	* doc/api/README.md
 		^ Update api doc
 
